[tool.poetry]
name = "marker-pdf"
version = "0.2.17"
description = "Convert PDF to markdown with high speed and accuracy."
authors = ["Vik Paruchuri <github@vikas.sh>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/VikParuchuri/marker"
keywords = ["pdf", "markdown", "ocr", "nlp"]
packages = [
    {include = "marker"}
]
include = [
    "convert.py",
    "convert_single.py",
    "chunk_convert.sh",
    "chunk_convert.py",
    "marker_app.py",
    "run_marker_app.py"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13,!=3.9.7"
scikit-learn = "^1.3.2,<=1.4.2"
Pillow = "^10.1.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
transformers = "^4.36.2"
numpy = "^1.26.1"
python-dotenv = "^1.0.0"
tqdm = "^4.66.1"
tabulate = "^0.9.0"
ftfy = "^6.1.1"
texify = "^0.1.10"
rapidfuzz = "^3.8.1"
surya-ocr = "^0.5.0"
filetype = "^1.2.0"
regex = "^2024.4.28"
pdftext = "^0.3.10"
uvicorn = "^0.29.0"
grpcio = "^1.63.0"
fastapi = "^0.112.1"

torch = { version = "2.4.0", source="torch"}
torchvision = { version = "0.19.0", source="torch"}

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
datasets = "^2.21.0"
streamlit = "^1.37.1"

[tool.poetry.scripts]
marker_api = "server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"